fix(ci): resolve Android lint errors — URLEncoder API 33, app:tint in XML layouts